--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,85 @@
+@import "colors";
+@mixin rotate($degree) {
+  -webkit-transform: rotate($degree);
+  -ms-transform: rotate($degree);
+  transform: rotate($degree);
+}
+
+.text-replace {
+  text-align: center;
+  .text-replace__heading {
+    font-size: large;
+  }
+  .text-replace__span {
+    @extend .text-replace__heading;
+    color: $orange;
+  }
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+.button--four {
+  @extend .text-replace;
+  margin: auto;
+  display: block;
+  padding: 18px;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #181a1d;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  &:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .8s ease-in-out;
+  }
+  &:active {
+    color: #000;
+    &:after {
+      background: transparent;
+    }
+  }
+  &:hover {
+    &:before {
+      opacity: 1;
+    }
+  }
+  &:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000000b8;
+    left: 0;
+    top: 0;
+  }
+}
+
+
+//---------------------------------------------------
 *{
   font-family: 'Heebo', sans-serif;
 }
@@ -14,7 +96,7 @@
   font-size: 32px;
 }
 .navbar {
-  background-color: #9dbefa;
+  background-color: $babyblue;
 }
 
 .carousel_wrap {
@@ -27,7 +109,7 @@
   max-height: 500px;
 }
 .nav-link:focus {
-  color: coral !important;
+  color: $endBall !important;
 }
 
 .wrapper2 {
@@ -67,19 +149,18 @@
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background-color: #9dbefa;
+  background-color: $startBall;
   animation-name: catch;
   animation-duration: 8s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   text-decoration: none;
-
 }
 
 @keyframes catch {
   0% {margin-left: calc(100% - 100px);}
-  50% {margin-left: 50%; background-color: coral}
-  100% {margin-left: 0; background-color: #9dbefa}
+  50% {margin-left: 50%; background-color: $endBall; @include rotate(360deg);}
+  100% {margin-left: 0; background-color: $startBall; @include rotate(0deg);}
 }
 
 .but_text {
